--- a/app/views/recipes/index.html.haml
+++ b/app/views/recipes/index.html.haml
@@ -1,2 +1,9 @@
--@recipes.each do |recipe|
-  %h1= link_to recipe.title, recipe
+- @recipe.each_slice(3) do |recipes|
+  .row
+    - recipes.each do |recipe|
+      .col-md-4
+        .recipe
+          .image_wrapper
+            = link_to recipe do
+              = image_tag recipe.picture.url(:medium)
+          %h2= link_to recipe.title, recipe
