--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,9 +10,14 @@
     .container
       .navbar-brand= link_to "Recipe Box", root_path
 
-      %ul.nav.navbar-nav.navbar-right
-        %li= link_to "Add Recipe", new_recipe_path
-        %li= link_to "Sign in", '#'
+      - if user_signed_in?
+        %ul.nav.navbar-nav.navbar-right
+          %li= link_to "New Recipe", new_recipe_path
+          %li= link_to "Log out", destroy_user_session_path, method: :delete
+      - else
+        %ul.nav.navbar-nav.navbar-right
+          %li= link_to "Sign up", new_user_registration_path
+          %li= link_to "Log in", new_user_session_path
 
   .container
     - flash.each do |message_type, message|
